--- a/index.html
+++ b/index.html
@@ -7,21 +7,23 @@
         font-family: 'Helvetica Neue';
         font-weight: normal;
         font-size: 16px;
-        margin: 0;
+        margin: 0 auto;
         padding: 0;
         background: #FFF; 
       }
       #sidebar {
-        float: left;
+        float: right;
         width: 300px; 
+        height: ;
         padding: 16px;
         margin: 0 10px 10px 10px;
         background: #FFF;
       }
       #main {
         padding: 16px;
-        margin: 10px 10px 10px 330px;
+        margin: 10px 330px 10px 10px;
         background: #FFF;
+        min-width: 340px
       }
       #contact img {
         width: 300px;
@@ -167,7 +169,7 @@
               <span class="enddate">April 2006</span>
             </div>
           </div>
-          <div class="text"><p class="context">For a Non-Profit Lupus Organization:</p><p>Architected and led the development effort for a custom workflow-based CMS to support complex legal, medical, and copywriter review and compliance requirements for a a public facing Lupus website. Led, mentored, and provided career development opportunities for a team of up to 6 developers at a time. Led the transition effort of the project to Avanade.</p></div>
+          <div class="text"><p class="context">For a non-profit Lupus organization:</p><p>Architected and led the development effort for a custom workflow-based CMS to support complex legal, medical, and copywriter review and compliance requirements for a a public facing Lupus website. Led, mentored, and provided career development opportunities for a team of up to 6 developers at a time. Led the transition effort of the project to Avanade.</p></div>
           <ul class="technologies">
             <li>C#</li> <li>ASP.NET</li> <li>MSMQ</li> <li>Microsoft SQL Server 2000/2005</li> <li>Microsoft Team Foundation Server</li>
           </ul>
