--- a/index.html
+++ b/index.html
@@ -2,95 +2,7 @@
 <html>
   <head>
     <title>Megan M. O'Neill</title>
-    <style>
-      body { 
-        font-family: 'Helvetica Neue';
-        font-weight: normal;
-        font-size: 16px;
-        margin: 0 auto;
-        padding: 0;
-        background: #FFF; 
-      }
-      #sidebar {
-        float: right;
-        width: 300px; 
-        height: ;
-        padding: 16px;
-        margin: 0 10px 10px 10px;
-        background: #FFF;
-      }
-      #main {
-        padding: 16px;
-        margin: 10px 330px 10px 10px;
-        background: #FFF;
-        min-width: 340px
-      }
-      #contact img {
-        width: 300px;
-        height: 300px;
-        border-radius: 16px;
-      }
-      #name {
-        font-size: 36px;
-        color: #000;
-        margin: 0;
-        padding: 0 0 10px 0;
-        text-align: right;
-      }
-      #summary {
-        text-align: right; 
-      }
-      #summary .text {
-        font-size: 14px;
-        color: #666;
-      }
-      .job {
-        padding-bottom: 8px;
-      }
-      .position {
-        margin: 8px 0;
-        font-size: 26px;
-      }
-      .company {
-        color: #666;
-        float: right;
-        width: 400px;
-        text-align: right;
-        font-size: 26px;
-        padding: 2px 0 0 0;
-      }
-      .timeandplace {
-        color: #AAA;
-        font-size: 14px;
-        width: 100%;
-        margin: 0;
-      }
-      .location {
-        float: right;
-        width: 300px;
-        text-align: right;
-      }
-      #experience .text p {
-        margin: 8px 0;
-        text-align: justify;
-        font-size: 18px;
-      }
-      #experience .text .context {
-        color: #AAA;
-      }
-      .technologies {
-        font-size: 14px;
-        margin: 8px 0;
-        color: #AAA;
-        padding: 0;
-        list-style-type: none;
-        text-align: left;
-      }
-      .technologies li { 
-        display: inline;
-        padding-right: 8px;
-      }
-    </style>
+    <link href="styles/main.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div id="sidebar">
