Added favicon to html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Megan M. O'Neill</title>
     <link href="styles/main.css" rel="stylesheet" type="text/css" />
+    <link href="/favicon.ico" rel="shortcut icon" />
   </head>
   <body>
     <div id="sidebar">
