--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <title>Megan M. O'Neill</title>
     <link href="styles/main.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="components/react/react.min.js"></script>
-    <script type="text/javascript" src="components/react/JSXTransformer.js"></script>
   </head>
   <body>
     <div id="sidebar"></div>
     <div id="main"></div>
-    <script type="text/jsx" src="resume.jsx"></script>
+    <script type="text/javascript" src="build/resume.js"></script>
   </body>
 </html>
