--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Megan M. O'Neill</title>
     <link href="styles/main.css" rel="stylesheet" type="text/css" />
+    <script type="text/javascript" src="components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="components/react/react.min.js"></script>
   </head>
   <body>
