--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>Megan M. O'Neill</title>
     <link href="styles/main.css" rel="stylesheet" type="text/css" />
-    <script type="text/javascript" src="components/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="components/react/react.min.js"></script>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/react/0.10.0/react.min.js"></script>
   </head>
   <body>
     <div id="sidebar"></div>
