updating AKQA and Nurun status

--- a/index.html
+++ b/index.html
@@ -13,12 +13,29 @@
         </div>
         <h1 id="name">Megan M. O'Neill</h1>
         <div id="summary">
-          <span class="text">A seasoned professional with 15 years of experience in software development for financial services, health care, and non-profit industries. A demonstrated ability to master and excel in a wide range of technologies including web, mobile, and enterprise solutions. A strong track record as team lead and facilitating cross-team collaboration in developing high quality deliverables. Full knowledge of all aspects of the Software Development Life Cycle (SDLC) and fluent in Agile development methodologies.</span>
+          <span class="text">Full-stack generalist with a passion for building sustainable and rewarding software engineering environments.  Proven track record of rapidly mastering a wide range of new technologies in fast-paced environments.  Most inspired when creating solutions for real-world challenges.</span>
         </div>
       </div>
     </div>
     <div id="main">
       <div id="experience">
+        <div class="job">
+          <div class="titles">
+            <span class="company">Nurun</span>
+            <h2 class="position">Associate Technical Director</h2>
+          </div>
+          <div class="timeandplace">
+            <span class="location">San Francisco, CA</span>    
+            <div class="time">
+              <span class="startdate">August 2014</span> &ndash;
+              <span class="enddate">Present</span>
+            </div>
+          </div>
+          <div class="text"><p>Managed the effort to improve the market responsiveness of a suite of tablet applications used by field sales representatives. Identifying and executing strategies for improving client and vendor relations to facilitate the delivery of higher quality, sustainable retail environment products. Introducing industry best practices for managing the ongoing support and maintenance of the retail products in our portfolio. Architecting and managing the development effort on new and existing retail products. Working closely with Strategy to provide technical guidance on the viability of solutions pitched to the client. Developing strategies for building internal R&amp;D practice geared to retaining top engineering talent while providing prototypes and technical guidance for use by the Creative and Strategy teams.</p></div>
+          <ul class="technologies">
+            <li>iOS</li> <li>Android</li> <li>MonoTouch</li> <li>C#</li> <li>jQuery</li> <li>Jenkins</li> <li>Jira</li> <li>Git</li> <li>SVN</li> <li>Windows Services</li> <li>Cinder</li> <li>Kinect</li> <li>NFC</li>
+          </ul>
+        </div>
         <div class="job">
           <div class="titles">
             <span class="company">AKQA</span>
@@ -28,7 +45,7 @@
             <span class="location">New York, NY | San Francisco, CA</span>    
             <div class="time">
               <span class="startdate">November 2012</span> &ndash;
-              <span class="enddate">Present</span>
+              <span class="enddate">July 2014</span>
             </div>
           </div>
           <div class="text"><p>Managed the effort to improve the market responsiveness of a suite of tablet applications used by field sales representatives. Identifying and executing strategies for improving client and vendor relations to facilitate the delivery of higher quality, sustainable retail environment products. Introducing industry best practices for managing the ongoing support and maintenance of the retail products in our portfolio. Architecting and managing the development effort on new and existing retail products. Working closely with Strategy to provide technical guidance on the viability of solutions pitched to the client. Developing strategies for building internal R&amp;D practice geared to retaining top engineering talent while providing prototypes and technical guidance for use by the Creative and Strategy teams.</p></div>
