--- a/maps/test.html
+++ b/maps/test.html
@@ -9,6 +9,16 @@
         margin: 0px;
         padding: 0px
       }
+    #info-box {
+      background-color: white;
+      border: 1px solid black;
+      bottom: 30px;
+      padding: 10px;
+      position: absolute;
+      left: 30px;
+      font-family: Arial, Tahoma;
+      font-size: small;
+    }
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
@@ -44,10 +54,28 @@ google.maps.event.addDomListener(window, 'load', function() {
 
   map.data.setStyle(styleFeature);
 
-  $.getJSON( "http://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_week.geojson", function( data ) {
+  // var ctaLayer = new google.maps.KmlLayer({
+  //   url: '../data/Quaternary.kmz'
+  // });
+  // ctaLayer.setMap(map);
+  // console.log('kmz layer added');
+
+  map.data.addListener('mouseover', function(event) {
+    $("#info-box").html(populateInfo(event.feature));
+  });
+
+  $.getJSON( "http://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_month.geojson", function( data ) {
     map.data.addGeoJson(data);
   });
 });
+
+function populateInfo(data){
+  var info =  data.getProperty("place") + "<br/>";
+    info += "magnitude: " + data.getProperty("mag") + "<br/>";
+    info += new Date(data.getProperty("time"));
+
+  return info;
+}
 
 function styleFeature(feature) {
   var low = [151, 83, 34];   // color of mag 1.0
@@ -89,5 +117,6 @@ function interpolateHsl(lowHsl, highHsl, fraction) {
   </head>
   <body id="map-container">
     <div id="map-canvas"></div>
+    <div id="info-box">Hover over an event for more details</div>
   </body>
 </html>
