--- a/maps/test.html
+++ b/maps/test.html
@@ -63,16 +63,30 @@ google.maps.event.addDomListener(window, 'load', function() {
   map.data.addListener('mouseover', function(event) {
     $("#info-box").html(populateInfo(event.feature));
   });
-
+  console.log('adding earthquake events')
   $.getJSON( "http://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_month.geojson", function( data ) {
     map.data.addGeoJson(data);
+    console.log(map.getBounds().getNorthEast());
+    console.log(map.getBounds().getSouthWest());
   });
+  // console.log('adding fault line features')
+  // $.getJSON( "../data/quaternary.geojson", function( data ) {
+  //   map.data.addGeoJson(data);
+  // });
 });
 
 function populateInfo(data){
-  var info =  data.getProperty("place") + "<br/>";
+  var info = "";
+  if(data.getProperty("place"))
+  {
+    info +=  data.getProperty("place") + "<br/>";
     info += "magnitude: " + data.getProperty("mag") + "<br/>";
     info += new Date(data.getProperty("time"));
+  }
+  else
+  {
+    info +=  data.getProperty("Name");
+  }
 
   return info;
 }
